# aihelp

./: .CLAUDE.md  .GEMINI.md  .gitignore  AGENTS.md  ASSURANCE.md  CI_CD_HARDENING_REPORT.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci-parallel.yml  ci.yml  release.yml  security.yml
man/: aihelp.1
ops/runner/: .env.example  README.md  docker-compose.yml  install_to_docker_aihelp.sh
scripts/ci/: bootstrap_cargo_audit.sh  full_regression.sh
src/: agent.rs  client.rs  config.rs  lib.rs  main.rs  mcp.rs  prompt.rs  setup.rs
tests/: chat_basic.rs  config_roundtrip.rs  help_manpage.rs  list_discovery.rs  mcp_empty_servers_fallback.rs  mcp_policy.rs  mcp_tool_loop.rs  model_presence.rs  model_switch.rs  retry_timeouts.rs  sanitize_output.rs  setup_detection.rs  stdin_truncate.rs  stream_defaults.rs  support.rs
